# battleship_game

./: .gitignore  Cargo.toml  all-files.txt  merge_files.ps1
ai/: Cargo.toml
ai/src/: lib.rs
app/: Cargo.toml
app/src/: main.rs  placement.rs
battleship-audio/: Cargo.toml
battleship-audio/src/: lib.rs
battleship-cli/: Cargo.toml
battleship-cli/src/: main.rs
battleship-common/: Cargo.toml
battleship-common/src/: board.rs  lib.rs
battleship-config/: Cargo.toml
battleship-config/src/: lib.rs
battleship-core/: Cargo.toml
battleship-core/src/: board.rs  constants.rs  fleet.rs  lib.rs  ship.rs
battleship-embedded/: Cargo.toml
battleship-embedded/src/: main.rs
battleship-engine/: Cargo.toml
battleship-engine/src/: lib.rs
battleship-interface/: Cargo.toml
battleship-interface/src/: cli.rs  embedded.rs  lib.rs
battleship-metrics/: Cargo.toml
battleship-metrics/src/: lib.rs
battleship-player/: Cargo.toml
battleship-player/src/: lib.rs  posterior.rs  probability.rs
battleship-save/: Cargo.toml
battleship-save/src/: lib.rs
battleship-sim/: Cargo.toml
battleship-sim/src/: main.rs
battleship-transport/: Cargo.toml
battleship-transport/src/: lib.rs
console/: Cargo.toml
console/src/: main.rs  ui.rs
core/: Cargo.toml
core/src/: board.rs  constants.rs  fleet.rs  gameplay.rs  layout.rs  lib.rs  message.rs  probability.rs  setup.rs  ship.rs  state.rs
interface-cli/: Cargo.toml
interface-cli/src/: lib.rs
interface-embedded/: Cargo.toml
interface-embedded/src/: lib.rs
persistence/: Cargo.toml
persistence/src/: lib.rs
player/: Cargo.toml
player/src/: ai.rs  lib.rs
sim/: Cargo.toml
sim/src/: lib.rs
src/: board.rs  cli_interface.rs  constants.rs  embedded_interface.rs  fleet.rs  game.rs  game_loop.rs  interface.rs  lib.rs  main.rs  probability.rs  ship.rs
tests/: ai_vs_ai.rs  integration_test.rs
transport/: Cargo.toml
transport/src/: adapters.rs  lib.rs
