[package]
name = "battleship-embedded"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
battleship-core = { path = "../battleship-core" }
battleship-interface = { path = "../battleship-interface" }
battleship-transport = { path = "../battleship-transport" }
battleship-player = { path = "../battleship-player" }

[[bin]]
name = "battleship-embedded"
path = "src/main.rs"

