[package]
name = "battleship_console"
version = "0.1.0"
edition = "2021"

[dependencies]
battleship_core = { path = "../core" }
battleship_ai = { path = "../ai" }
crossterm = "0.23"
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
async-trait = "0.1"
